[package]
name = "omango-util"
version = "0.1.6"
authors = ["Trung Tran <tqtrungse@gmail.com>"]
edition = "2021"
description = "Utililites"
license = "MIT"
repository = "https://github.com/tqtrungse/omango-util"
homepage = "https://github.com/tqtrungse/omango-util"
documentation = "https://docs.rs/omango-util"
keywords = ["cpu-cacheline", "backoff", "hint", "rw-spinlock", "defer"]
categories = ["data-structures"]

